# crypto-analytics-platform

./: .gitignore  README.md
ai-research/data-pipeline/: feature_builder.py  fetch_ohlcv.py  normalize_data.py  requirements.txt
ai-research/feature-engineering/: orderflow_features.py  requirements.txt  structure_features.py  volatility_features.py
ai-research/model-training/: lstm_model.py  requirements.txt  transformer_model.py  xgboost_model.py
backend/api-gateway/: Program.cs  api-gateway.csproj  api-gateway.http
backend/auth-service/: Program.cs  appsettings.json  auth-service.csproj  auth-service.http
backend/signal-service/: Program.cs  signal-service.csproj
backend/user-service/: Program.cs  appsettings.json  user-service.csproj  user-service.http
core-engine/backtest-engine/: Cargo.toml
core-engine/backtest-engine/src/: main.rs  performance_metrics.rs  simulator.rs
core-engine/indicator-engine/: Cargo.toml
core-engine/market-ingestion/: Cargo.toml
core-engine/market-ingestion/src/: aggregator.rs  binance_ws.rs  bybit_ws.rs  main.rs  okx_ws.rs
core-engine/orderblock-engine/: Cargo.toml
core-engine/risk-engine/: Cargo.toml
core-engine/signal-engine/: Cargo.toml
core-engine/signal-engine/src/: entry_logic.rs  exit_logic.rs  main.rs  multi_timeframe.rs  signal_scoring.rs
core-engine/structure-engine/: Cargo.toml
core-engine/structure-engine/src/: bos.rs  main.rs  msb.rs  trend.rs
devops/: README.md
devops/docker/: Dockerfile.kafka-streams  Dockerfile.model-serving  Dockerfile.order-router  Dockerfile.paper-trading  README.md
devops/k8s/: README.md
docs/: architecture.md  database-schema.md
execution-engine/: README.md
mlops/: README.md
mobile/: README.md
monitoring/: README.md
simulator/: README.md
(+97 files in other folders)
