[package]
name = "backtest-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
statrs = "0.16"
ndarray = "0.15"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"