[package]
name = "market-ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
redis = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"