[package]
name = "structure-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.36", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
statrs = "0.16"  # For statistical computations if needed